qemu rv64 virt hello world
* simple main that doesn't run;
* trying to initialize stack;
* use of futures was removed from IO (will be back after official guide release);
* new service API;
* UART 16550 drv implements new IO API;

--- a/qemu-riscv64-virt/Cargo.toml
+++ b/qemu-riscv64-virt/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
-name = "rusty-scrapyard-lib"
+name = "rusty-scrapyard-rv64-virt"
 version = "0.0.1"
 edition = "2024"
 authors = [ "r0cknr011a" ]
 
 [dependencies]
+rusty-scrapyard-lib = { path = "../lib" }
 rusty-scrapyard-iomem = { path = "../iomem" }
+rusty-scrapyard-cpu = { path = "../cpu" }
