--- a/iomem/Cargo.toml
+++ b/iomem/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rusty-scrapyard-iomem"
-version.workspace = true
-edition.workspace = true
-authors.workspace = true
+version = "0.0.1"
+edition = "2024"
+authors = [ "r0cknr011a" ]
 
 [dependencies]
