--- a/unsafe/Cargo.toml
+++ b/unsafe/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "rusty-scrapyard-iomem"
-version = "0.0.1"
+name = "toolkit-unsafe"
+version = "0.0.2"
 edition = "2024"
 authors = [ "r0cknr011a" ]
 
