--- a/qemu-riscv64-virt/Cargo.toml
+++ b/qemu-riscv64-virt/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "rusty-scrapyard-rv64-virt"
-version = "0.0.1"
+name = "toolkit-rv64-virt"
+version = "0.0.2"
 edition = "2024"
 authors = [ "r0cknr011a" ]
 
