--- a/toolkit/Cargo.toml
+++ b/toolkit/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "rusty-scrapyard-lib"
-version = "0.0.1"
+name = "toolkit"
+version = "0.0.3"
 edition = "2024"
 authors = [ "r0cknr011a" ]
 
